improved column flex objects, fixed meal textbox bleeding, further styling

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
+html,
 body {
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
 	font-size: 16px;
 	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
 		'Lucida Sans', Arial, sans-serif;
@@ -8,96 +12,56 @@ body > footer {
 	align-content: flex-end;
 }
 
-.flex_item {
-	padding: 10px;
-	margin: 10px;
-	background-color: orange;
-	color: white;
-}
 .flex {
 	padding: 10px;
 	margin: 10px;
 	display: flex;
-	/* Set the property display to flex below! */
 }
 
 .header {
+	flex: 0 1 auto;
+	padding: 10px;
+	margin: 10px;
 	justify-content: center;
 	height: 100px;
 }
 
-.column {
-	width: auto;
-	background-color: white;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	align-items: center;
-	height: auto;
-	/* Set the property flex direction to column below! */
-}
-
-#meal1 {
-	margin: 20px;
-	display: flex;
-	align-items: center;
-	background-image: url('images/steak.png');
-	background-repeat: no-repeat;
-	background-size: 100%;
-	overflow: hidden;
-}
-
-#meal2 {
-	margin: 20px;
-	display: flex;
-	background-image: url('images/soup.png');
-	background-repeat: no-repeat;
-	background-size: 100%;
-}
-
-#meal3 {
-	margin: 20px;
-	display: flex;
-	justify-content: flex-end;
-	background-image: url('images/cheesecake.png');
-	background-repeat: no-repeat;
-	background-size: 100%;
-}
-
-.text {
-	display: flex;
-	padding: 15px;
-	margin-top: 190px;
-	font-size: ;
-	flex-direction: column;
-	background-color: rgba(0, 0, 0, 0.6);
-	color: white;
-	overflow: hidden;
-}
-
-.text h1 {
-	font-size: 30px;
-}
-
-.row {
-	background-color: #fff7de;
-	flex-direction: row;
-	/* Set the property flex-direction to row below! */
-}
-
 .nav {
+	padding: 20px;
+	margin: 10px;
+	flex: 0 1 auto;
 	background-color: black;
 	align-items: center;
 	justify-content: space-between;
 }
 
+#orderOnline,
+#orderNow {
+	background-color: white;
+	border-color: white;
+	margin: 0 50px;
+	font-size: 20px;
+	width: 200px;
+}
+
+#orderOnline:hover,
+#orderNow:hover {
+	background-color: red;
+	color: white;
+	border-color: red;
+}
+
 a {
 	color: white;
 	text-decoration: none;
+	font-size: 22px;
+}
+
+a:hover {
+	color: red;
 }
 
 .left {
-	justify-content: flex-start;
 }
 
 .center a {
@@ -105,44 +69,55 @@ a {
 }
 
 .right {
-	justify-content: flex-end;
+}
+
+.column {
+	background-color: white;
+	display: flex;
+	flex: 1;
+	flex-direction: column;
+	align-items: center;
+}
+
+.meal {
+	margin: 20px;
+	display: flex;
+	flex: 0 1 278px;
+	align-items: center;
+	background-repeat: no-repeat;
+	width: 800px;
+	height: 278px;
+}
+
+#meal1 {
+	background-image: url('../images/steak.png');
+}
+
+#meal2 {
+	background-image: url('../images/soup.png');
+}
+
+#meal3 {
+	background-image: url('../images/cheesecake.png');
+}
+
+.text {
+	padding: 10px 30px 10px 30px;
+	align-self: flex-end;
+	background-color: rgba(0, 0, 0, 0.6);
+	color: white;
+}
+
+.text h1 {
+	font-size: 34px;
 }
 
 .footer {
 	background-color: black;
-	padding: 35px;
+	padding: 25px;
 	justify-content: center;
 }
 
 .footer a {
 	margin: 0px 50px;
-}
-
-#orderOnline {
-	background-color: white;
-	border-color: white;
-	margin-left: 50px;
-	font-size: 20px;
-	width: 200px;
-}
-
-#orderOnline:hover {
-	background-color: red;
-	color: white;
-	border-color: red;
-}
-
-#orderNow {
-	background-color: white;
-	border-color: white;
-	margin-right: 50px;
-	font-size: 20px;
-	width: 200px;
-	flex-shrink: 1;
-}
-
-#orderNow:hover {
-	background-color: red;
-	color: white;
-	border-color: red;
 }
